k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasklistapp-deployment
  namespace: tasklistapp
  labels:
    app: tasklistapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tasklistapp
  template:
    metadata:
      labels:
        app: tasklistapp
    spec:
      containers:
      - name: tasklistapp
        image: ghcr.io/slmakomazi/tasklistapp:api-latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
