k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasklistapp-service
  namespace: tasklistapp
  labels:
    app: tasklistapp
spec:
  selector:
    app: tasklistapp
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
